// Issue: #1590 - protobuf comparison
syntax = "proto3";

package combos;
option go_package = "github.com/gc-lover/necpgame-monorepo/services/combat-combos-service-go/proto";

// Простой пример для benchmark сравнения
message GetComboCatalogRequest {
  string combo_type = 1;
  string complexity = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message Combo {
  string id = 1;
  string name = 2;
  string description = 3;
  string combo_type = 4;
  string complexity = 5;
  int32 base_damage = 6;
  float damage_multiplier = 7;
  int32 cooldown_seconds = 8;
}

message ComboCatalogResponse {
  repeated Combo combos = 1;
  int32 total = 2;
}


